<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mascotas.views.AnadirEntidadesActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Otro"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/otro_icon"
        app:layout_constraintStart_toStartOf="@+id/otro_icon"
        app:layout_constraintTop_toBottomOf="@+id/otro_icon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Reptil"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/reptil_icon"
        app:layout_constraintStart_toStartOf="@+id/reptil_icon"
        app:layout_constraintTop_toBottomOf="@+id/reptil_icon" />

    <ImageView
        android:id="@+id/perro_icon"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:tag="perro"
        app:layout_constraintEnd_toStartOf="@+id/gato_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/dog" />

    <ImageView
        android:id="@+id/gato_icon"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:clickable="true"
        android:tag="gato"
        app:layout_constraintEnd_toStartOf="@+id/roedor_icon"
        app:layout_constraintStart_toEndOf="@+id/perro_icon"
        app:layout_constraintTop_toTopOf="@+id/perro_icon"
        app:srcCompat="@drawable/kitty" />

    <ImageView
        android:id="@+id/roedor_icon"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:clickable="true"
        android:tag="roedor"
        app:layout_constraintEnd_toStartOf="@+id/ave_icon"
        app:layout_constraintStart_toEndOf="@+id/gato_icon"
        app:layout_constraintTop_toTopOf="@+id/gato_icon"
        app:srcCompat="@drawable/hamster" />

    <ImageView
        android:id="@+id/ave_icon"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:clickable="true"
        android:tag="ave"
        app:layout_constraintEnd_toStartOf="@+id/reptil_icon"
        app:layout_constraintStart_toEndOf="@+id/roedor_icon"
        app:layout_constraintTop_toTopOf="@+id/roedor_icon"
        app:srcCompat="@drawable/bird" />

    <ImageView
        android:id="@+id/reptil_icon"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:clickable="true"
        android:tag="reptil"
        app:layout_constraintEnd_toStartOf="@+id/otro_icon"
        app:layout_constraintStart_toEndOf="@+id/ave_icon"
        app:layout_constraintTop_toTopOf="@+id/ave_icon"
        app:srcCompat="@drawable/chameleon" />

    <ImageView
        android:id="@+id/otro_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:tag="otro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reptil_icon"
        app:layout_constraintTop_toTopOf="@+id/reptil_icon"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Perro"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/perro_icon"
        app:layout_constraintStart_toStartOf="@+id/perro_icon"
        app:layout_constraintTop_toBottomOf="@+id/perro_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Gato"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/gato_icon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gato_icon"
        app:layout_constraintTop_toBottomOf="@+id/gato_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Roedor"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/roedor_icon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/roedor_icon"
        app:layout_constraintTop_toBottomOf="@+id/roedor_icon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Pájaro"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/ave_icon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ave_icon"
        app:layout_constraintTop_toBottomOf="@+id/ave_icon" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/otro_icon"
        app:layout_constraintTop_toTopOf="@+id/otro_icon"
        app:srcCompat="@drawable/tarantula" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/otro_icon"
        app:layout_constraintTop_toTopOf="@+id/otro_icon"
        app:srcCompat="@drawable/cow" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/otro_icon"
        app:srcCompat="@drawable/fish" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/otro_icon"
        app:srcCompat="@drawable/goat" />

    <LinearLayout
        android:id="@+id/formulario_info_mascota"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>