<resources>
    <string name="app_name">PetProtech</string>
    <string name="perro">Perro</string>
    <string name="gato">Gato</string>
    <string name="pajaro">Pájaro</string>
    <string name="roedor">Roedor</string>
    <string name="reptil">Reptil</string>
    <string name="otro">Otro</string>
    <string name="raza">Raza</string>
    <string name="especie">Especie</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="numero_chip">Número de chip</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="veterinario_preferido">Veterinario de preferencia</string>
    <string name="anadir_mascota">Añadir Mascota</string>
    <string name="atras">← Atrás</string>
    <string name="cancelar">← Cancelar</string>
    <string name="siguiente">Siguiente →</string>
    <string name="mas_tarde">Más Tarde →</string>
    <string name="nueva_mascota">Nueva Mascota</string>
    <string name="error_campo_obligatorio">Campo obligatorio</string>
    <string name="error_solo_numeros">Debe ser un número</string>
    <string name="error_mayor_a_uno">Debe ser un mayour a uno</string>
    <string name="error_nacimiento_futuro">La fecha de nacimiento no puede ser en el futuro</string>
    <string name="error_chip_invalido">El número de chip debe contener 15 dígitos</string>
    <string name="anadir_imagen">AÑADIR IMAGEN</string>
    <string name="especializacion">Especialización</string>
    <string name="direccion">Dirección</string>
    <string name="pagina_web">Página Web</string>
    <string name="email">Correo Electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="apertura">Hora Apertura</string>
    <string name="cierre">Hora Cierre</string>
    <string name="veterinario">Veterinario</string>
    <string name="centro_veterinario">Centro Veterinario</string>
    <string name="medicacion">MEDICACION</string>
    <string name="eventos">EVENTOS</string>
    <string name="mascotas">MASCOTAS</string>
    <string name="anadir_item">Añadir Artículo</string>
    <string name="veterinarios">VETERINARIOS</string>
    <string name="finalizar">Finalizar →</string>
    <string name="lunes_abrv">L</string>
    <string name="martes_abrv">M</string>
    <string name="miercoles_abrv">X</string>
    <string name="jueves_abrv">J</string>
    <string name="viernes_abrv">V</string>
    <string name="sabado_abrv">S</string>
    <string name="domingo_abrv">D</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="dias">Días</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar_mascota">¿Seguro que deseas eliminar esta mascota?</string>
    <string name="eliminar_veterinario">¿Seguro que deseas eliminar este veterinario?</string>
    <string name="eliminar_medicacion">¿Seguro que deseas eliminar esta medicación?</string>
    <string name="anadir_mediacion">Añadir Medicación</string>
    <string name="anadir_cita">Añadir Cita</string>
    <string name="anadir">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="nombre_medicamento">Nombre Medicamento</string>
    <string name="tipo_medicamento">Tipo</string>
    <string name="cantidad">Cantidad</string>
    <string name="horas">Horas</string>
    <string name="duracion_dias">Duración días</string>
    <string name="cada">Cada</string>
    <string name="durante">durante</string>

</resources>